TNC-013: Cleaning the remaining files and providing an artistId while fetching the album list