@@ -1,15 +1,14 @@
 package amateur.shaobig.tnc.service.album;
 
 import amateur.shaobig.tnc.dto.album.ReadAlbumDto;
-import amateur.shaobig.tnc.dto.album.ReadAllAlbumWithSongsDto;
+import amateur.shaobig.tnc.dto.album.ReadAllAlbumDto;
 import amateur.shaobig.tnc.dto.album.UpdateAlbumDto;
 import amateur.shaobig.tnc.entity.Album;
 import amateur.shaobig.tnc.service.ReadAllService;
 import amateur.shaobig.tnc.service.ReadService;
 import amateur.shaobig.tnc.service.UpdateService;
 import amateur.shaobig.tnc.transformer.album.ReadAlbumDtoTransformer;
-import amateur.shaobig.tnc.transformer.album.ReadAllAlbumWithSongsDtoTransformer;
-import amateur.shaobig.tnc.transformer.album.ReadFullAlbumDtoTransformer;
+import amateur.shaobig.tnc.transformer.album.ReadAllAlbumDtoTransformer;
 import amateur.shaobig.tnc.transformer.album.UpdateAlbumDtoTransformer;
 import lombok.AccessLevel;
 import lombok.Getter;
@@ -17,16 +16,14 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Getter(value = AccessLevel.PACKAGE)
-public class AlbumDtoService implements ReadService<ReadAlbumDto>, ReadAllService<ReadAllAlbumWithSongsDto>, UpdateService<Album, UpdateAlbumDto> {
+public class AlbumDtoService implements ReadService<ReadAlbumDto>, ReadAllService<ReadAllAlbumDto>, UpdateService<Album, UpdateAlbumDto> {
 
     private final ReadAlbumDtoTransformer readAlbumDtoTransformer;
-    private final ReadFullAlbumDtoTransformer readFullAlbumDtoTransformer;
-    private final ReadAllAlbumWithSongsDtoTransformer readAllAlbumWithSongsDtoTransformer;
+    private final ReadAllAlbumDtoTransformer readAllAlbumDtoTransformer;
     private final UpdateAlbumDtoTransformer updateAlbumDtoTransformer;
     private final AlbumProxyService albumProxyService;
 
@@ -36,10 +33,10 @@ public class AlbumDtoService implements ReadService<ReadAlbumDto>, ReadAllServic
     }
 
     @Override
-    public List<ReadAllAlbumWithSongsDto> readAll() {
+    public List<ReadAllAlbumDto> readAll() {
         return getAlbumProxyService().readAll().stream()
-                .map(getReadAllAlbumWithSongsDtoTransformer()::transform)
-                .collect(Collectors.toList());
+                .map(getReadAllAlbumDtoTransformer()::transform)
+                .toList();
     }
 
     @Override
